--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: white;
   color: white;
 }
