--- a/src/components/Intro/LandingView.css
+++ b/src/components/Intro/LandingView.css
@@ -3,6 +3,7 @@
   position: relative;
   height: 90vh;
   background-image: url(../../assets/landing-image.jpg);
+  /* linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)); */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -75,15 +76,11 @@
   .landing__view-content {
     width: 80%;
   }
-
-  .overlay {
-    display: none;
-  }
 }
 
 @media (max-width: 650px) {
   .landing__view {
-    height: 70vh;
+    height: 80vh;
     background-size: contain;
     background-position: center;
   }
