--- a/src/components/Intro/About.css
+++ b/src/components/Intro/About.css
@@ -1,10 +1,10 @@
 .about {
   display: flex;
-  height: 100vh;
   width: 100%;
   padding: 0 5rem;
   justify-content: center;
   padding: 0 1rem;
+  margin-bottom: 2rem;
 }
 
 .about__container {
@@ -14,6 +14,7 @@
   align-items: center;
   width: 90%;
   gap: 1rem;
+  z-index: 13;
 }
 
 /* styling the about content and image */
@@ -23,7 +24,11 @@
   align-items: center;
 }
 .about__image {
-  width: 20rem;
+  width: 25rem;
+}
+
+.about__paragraph {
+  font-size: 1.2rem;
 }
 
 /* media query for tablets */
@@ -58,5 +63,13 @@
     gap: 2rem;
     align-items: center;
     text-align: center;
+  }
+
+  .about__image {
+    width: 20rem;
+  }
+
+  .about__paragraph {
+    font-size: 1rem;
   }
 }
