--- a/src/components/galery/GalleryItems.css
+++ b/src/components/galery/GalleryItems.css
@@ -24,6 +24,33 @@
   object-fit: cover;
 }
 
+.gallery__image-container {
+  position: relative;
+}
+
+.gallery__overlay {
+  visibility: hidden;
+  height: 0%;
+  font-size: 0;
+  opacity: 0;
+  height: 0%;
+}
+
+.gallery__image-container:hover > .gallery__overlay {
+  visibility: visible;
+  font-size: 1rem;
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s;
+}
+
 @media (max-width: 950px) {
   .gallery__grid {
     display: grid;
@@ -36,5 +63,11 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
+  }
+
+  .gallery__grid img {
+    width: 100%;
+    height: 18rem;
+    object-fit: cover;
   }
 }
