--- a/src/components/galery/GalleryItem.css
+++ b/src/components/galery/GalleryItem.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  font-size: 1.1rem;
 }
 
 .about__item-button {
@@ -28,6 +29,8 @@
   background-color: white;
   border-radius: 1.5rem;
   font-size: 1.1rem;
+  border: none;
+  cursor: pointer;
 }
 .about__item-button:hover {
   background-color: gray;
@@ -55,5 +58,6 @@
 
   .about__item {
     width: 90%;
+    font-size: 1rem;
   }
 }
