--- a/src/components/galery/GalleryItems.css
+++ b/src/components/galery/GalleryItems.css
@@ -30,6 +30,10 @@
   position: relative;
 }
 
+.see__more {
+  cursor: pointer;
+}
+
 /* setting the gallery image overlay to hidden */
 .gallery__overlay {
   visibility: hidden;
@@ -53,7 +57,6 @@
   width: 100%;
   height: 100%;
   transition: all 0.5s;
-  color: white;
 }
 
 /* setting media queries for tablets */
