--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ ul {
   list-style: none;
 }
 
+h1 {
+  font-size: 2rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
