--- a/src/components/Intro/Header.css
+++ b/src/components/Intro/Header.css
@@ -48,6 +48,7 @@ nav {
   display: none;
 }
 
+/* setting media queries for mobile screens */
 @media (max-width: 650px) {
   .header {
     padding: 0 3rem;
