--- a/src/components/Intro/LandingView.css
+++ b/src/components/Intro/LandingView.css
@@ -66,6 +66,19 @@
   color: white;
 }
 
+.background__change-btn button {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.4rem;
+  border-radius: 1.5rem;
+  transition: all 0.3s;
+}
+.background__change-btn button:hover {
+  background-color: gray;
+  color: white;
+}
+
 /* setting media queries for tablets */
 @media (max-width: 950px) {
   .landing__view {
