--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,27 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
+}
+
+section {
+  display: flex;
+  text-align: center;
+  padding: 0 2rem;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -21,17 +42,6 @@ ul {
   list-style: none;
 }
 
-h1 {
-  font-size: 2rem;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+p {
   color: white;
 }
